# LED-Sign

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: PrimaryDisplay.h  SomeClass.h  SomeMoreComplicatedClass.h
lib/: CMakeLists.txt
lib/rpi-rgb-led-matrix/: CMakeLists.txt
lib/websocketpp/: CMakeLists.txt
lib/wiringpi/: CMakeLists.txt
src/: SomeMoreComplicatedClass.cpp  VirtualPrimaryDisplay.cpp
